4 - added one more p tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>Текст</div>
     <p>Коммит 2</p>
     <p>Коммит 3</p>
+    <p>Коммит 4 - основной разработчик</p>
     <script src="script.js"></script>
 </body>
 </html>
