5 - added one more p tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Коммит 2</p>
     <p>Коммит 3</p>
     <p>Коммит 4 - основной разработчик</p>
+    <p>Коммит 5 - основной разработчик</p>
     <script src="script.js"></script>
 </body>
 </html>
