6 - added one more p tag (dev-1)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Коммит 3</p>
     <p>Коммит 4 - основной разработчик</p>
     <p>Коммит 5 - основной разработчик</p>
+    <p>Коммит 6 - основной разработчик</p>
     <script src="script.js"></script>
 </body>
 </html>
